# html-codegen

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md
cli/html2rust/: Cargo.toml
cli/html2rust/src/: args.rs
example/: Cargo.toml  run.sh
example/api-axum/: Cargo.toml
example/api-rocket/: Cargo.toml  watch.sh
example/api-rocket/src/: main.rs
example/html/: Cargo.toml  watch.sh
example/html/src/: lib.rs
html-codegen/: Cargo.toml
html-codegen-macros/: Cargo.toml
html-codegen-macros/src/: element.rs  element_attributes.rs  function_component.rs  lib.rs
html-codegen-macros/tests/: html.rs
html-codegen/src/: fragment.rs  html.rs  html_escaping.rs  lib.rs  render.rs  text_element.rs
html2rust/src/: args.rs  main.rs
lib/: Cargo.toml
lib/src/: dylibload.rs  lib.rs  numbers.rs  simple_element.rs
macros/: Cargo.toml
macros/src/: dylibload.rs  element.rs  lib.rs  tags.rs
macros/tests/: dylibload.rs  html.rs
render/: Cargo.toml
render/src/: fragment.rs  html.rs  lib.rs  render.rs  simple_element.rs  text_element.rs
render_macros/: Cargo.toml
render_macros/src/: element_attributes.rs  lib.rs
render_tests/: Cargo.toml
render_tests/src/: lib.rs
render_tests/ui/fail/: unexpected-attribute.stderr
tests/: Cargo.toml
tests/src/: lib.rs
tests/ui/fail/: unclosed-tag-complex.rs  unclosed-tag.rs  unexpected-attribute.rs
