[package]
name = "html-codegen"
version = "0.1.0"
authors = ["Jenifer Champagne <jen@iferc.ca>"]
edition = "2021"
description = "A safe and simple template engine with the ergonomics of JSX"
readme = "../README.md"
repository = "https://github.com/JenChampagne/html-codegen"
keywords = ["jsx", "rsx", "html", "codegen", "template"]
categories = ["template-engine"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered_hash_map = "0.4.0"
html-codegen-macros = { path = "../html-codegen-macros", version = "0.1.0" }

[dev-dependencies]
pretty_assertions = "1.4"
