[package]
name = "render"
version = "0.4.0"
authors = ["Gal Schlezinger <gal@spitfire.co.il>", "Jenifer Champagne <jen@iferc.ca>"]
edition = "2021"
description = "A safe and simple template engine with the ergonomics of JSX"
readme = "../README.md"
repository = "https://github.com/JenChampagne/render.rs"
keywords = ["jsx", "rsx", "html", "render", "template"]
categories = ["template-engine"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered_hashmap = "0.0.3"
render_macros = { path = "../render_macros", version = "0.4.0" }

[dev-dependencies]
pretty_assertions = "1.4"
