[package]
name = "html-codegen-tests"
version = "0.1.0"
authors = ["Jenifer Champagne <jen@iferc.ca>"]
edition = "2021"
publish = false
repository = "https://github.com/JenChampagne/html-codegen"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html-codegen = { path = "../lib" }

[dev-dependencies]
pretty_assertions = "1.4"
trybuild = "1.0"
